# camera_calibration

./: .gitignore  .pre-commit-config.yaml  README.md  calibrate.py  calibrate_intrinsics.py  checkerboard_detection.py  compute_extrinsics.py  compute_intrinsics.py  pyproject.toml  requirements.txt  undistort_image.py  utils.py
camera_calibration/: board.py  board_detection.py  camera.py  chessboard_detection.py  extrinsics.py  intrinsics.py  utils.py
camera_calibration/sync/: extract_frame.py  extract_frames_timestamps.py  video_synchronizer.py
camera_calibration/utils/: ffmpeg_progress_socket.py  image_warper.py
camera_calibration/vis/: camera_visualizer.py  visualizer.py
examples/: extrinsics_calibration.py  intrinsics_calibration.py  spectrogram_alignment.py
examples/data/: gt_camera_intrinsics.txt  gt_camera_resolution.txt  gt_export.py  gt_scene.blend
examples/data/Camera_1/: camera_extrinsics.txt
examples/data/Camera_2/: camera_extrinsics.txt
examples/data/Camera_3/: camera_extrinsics.txt
examples/data/Camera_4/: camera_extrinsics.txt
examples/data/camera_1/: camera_extrinsics.txt
examples/data/camera_2/: camera_extrinsics.txt
examples/data/camera_3/: camera_extrinsics.txt  camera_resolution.txt
examples/data/camera_4/: camera_extrinsics.txt  camera_intrinsics.txt
