[tool.poetry]
name = "camera-calibration"
version = "0.1.0"
description = "Toolbox to calibrate intrinsics and extrinsics of camera."
authors = ["Charles JAVERLIAT <charles.javerliat@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.26.4"
open3d = "^0.18.0"
tqdm = "^4.66.4"
opencv-python = "^4.10.0.84"
click = "^8.1.7"
rich = "^13.7.1"
rich-click = "^1.8.3"
torch = { version = "^2.3.1+cu121", source = "pytorch-cuda" }
torchvision = { version = "^0.18.1+cu121", source = "pytorch-cuda" }
torchaudio = { version = "^2.3.1+cu121", source = "pytorch-cuda" }

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
mypy = "^1.10.1"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
